--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node server.js",
     "build": "tsc -b && vite build",
-    "start": "vite preview",
+    "start": "node server.js",
     "lint": "eslint ."
   },
   "dependencies": {
     "@tanstack/react-query": "~5.67.2",
+    "express": "~4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "~6.1.15"
+    "styled-components": "~6.1.15",
+    "vite-express": "~0.20.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -27,7 +29,6 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "vite-plugin-vercel-api": "~0.4.0"
+    "vite": "^6.2.0"
   }
 }
