--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node server.js",
     "build": "tsc -b && vite build",
     "start": "node server.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "playwright test"
   },
   "dependencies": {
     "@tanstack/react-query": "~5.67.2",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@playwright/test": "~1.51.0",
+    "@types/node": "~22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vercel/node": "~5.1.12",
